--- a/.gitmodules
+++ b/.gitmodules
@@ -1,39 +1,39 @@
 [submodule ".vim/autoload"]
-	path = .vim/autoload
+	path = editors/vim/.vim/autoload
 	url = git://github.com/tpope/vim-pathogen.git
 [submodule ".vim/bundle/surround"]
-	path = .vim/bundle/surround
+	path = editors/vim/.vim/bundle/surround
 	url = git://github.com/tpope/vim-surround.git
 [submodule ".vim/bundle/fugitive"]
-	path = .vim/bundle/fugitive
+	path = editors/vim/.vim/bundle/fugitive
 	url = git://github.com/tpope/vim-fugitive.git
 [submodule ".vim/bundle/supertab"]
-	path = .vim/bundle/supertab
+	path = editors/vim/.vim/bundle/supertab
 	url = git://github.com/ervandew/supertab.git
 [submodule ".vim/bundle/gundo"]
-	path = .vim/bundle/gundo
+	path = editors/vim/.vim/bundle/gundo
 	url = git://github.com/sjl/gundo.vim.git
 [submodule ".vim/bundle/python-mode"]
-	path = .vim/bundle/python-mode
+	path = editors/vim/.vim/bundle/python-mode
 	url = git://github.com/klen/python-mode.git
 [submodule ".vim/bundle/a"]
-	path = .vim/bundle/a
+	path = editors/vim/.vim/bundle/a
 	url = git://github.com/vim-scripts/a.vim.git
 [submodule ".vim/bundle/nerdtree"]
-	path = .vim/bundle/nerdtree
+	path = editors/vim/.vim/bundle/nerdtree
 	url = git://github.com/scrooloose/nerdtree.git
 [submodule ".vim/bundle/snipMate"]
-	path = .vim/bundle/snipMate
+	path = editors/vim/.vim/bundle/snipMate
 	url = git://github.com/msanders/snipmate.vim.git
 [submodule ".vim/bundle/miniBufExplorer"]
-	path = .vim/bundle/miniBufExplorer
+	path = editors/vim/.vim/bundle/miniBufExplorer
 	url = git://github.com/fholgado/minibufexpl.vim.git
 [submodule ".vim/bundle/taglist"]
-	path = .vim/bundle/taglist
+	path = editors/vim/.vim/bundle/taglist
 	url = git://github.com/vim-scripts/taglist.vim.git
 [submodule ".vim/bundle/tagHighlight"]
-	path = .vim/bundle/tagHighlight
+	path = editors/vim/.vim/bundle/tagHighlight
 	url = git://github.com/vim-scripts/TagHighlight.git
 [submodule ".vim/bundle/autotag"]
-	path = .vim/bundle/autotag
+	path = editors/vim/.vim/bundle/autotag
 	url = git://github.com/vim-scripts/AutoTag.git
