--- a/config.json
+++ b/config.json
@@ -1,22 +1,20 @@
-{
-    "install":{
-        "editors/vim/.vimrc":{
-            "type":"file",
-            "method":"link",
-            "destination":"~/.vimrc"
-        },
-        "editors/vim/.vim":{
-            "type":"directory",
-            "method":"copy",
-            "destination":"~/.vim/",
-            "options":[
-                "--no-backup"
-            ]
-        },
-        "scm/git/.gitconfig":{
-            "type":"file",
-            "method":"copy",
-            "destination":"~/.gitconfig"
-        }
+[
+    {
+        "type": "file",
+        "method": "link",
+        "source": "editors/vim/.vimrc",
+        "destination": "$HOME/.vimrc"
+    },
+    {
+        "type": "directory",
+        "method": "copy",
+        "source": "editors/vim/.vim",
+        "destination": "$HOME/.vim"
+    },
+    {
+        "type": "file",
+        "method": "copy",
+        "source": "scm/git/.gitconfig",
+        "destination": "$HOME/.gitconfig"
     }
-}
+]
